src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__cast_mz_timestamp_to_timestamp_tz__impl.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: TimestampTz {
            precision: None,
        },
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: TimestampTz {
            precision: None,
        },
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastTimestampTzToMzTimestamp(
            CastTimestampTzToMzTimestamp,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
